--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,9 +5,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; 2020 Sixteen Clothing Co., Ltd.
-
-            - Design: <a rel="nofollow noopener" href="" target="_blank">TemplateMo</a></p>
+              <p>Copyright &copy; 2023 Exotic Plants Co. </p>
             </div>
           </div>
         </div>
