--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -38,7 +38,7 @@
                       <div class="down-content">
                         <a href="#"><h4>{{ product.title }}</h4></a>
                         <h6>{% if product.price %} {{ product.price }} mdl {% else %} negotiable {% endif %}</h6>
-                        <p>{{ product.description }}</p>
+                        <p>{{ product.description|slice:":150" }}...</p>
                       </div>
                     </div>
                   </div>
