Added marius's photo

--- a/templates/products/about.html
+++ b/templates/products/about.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% include 'header.html' %}
 
     <!-- Page Content -->
@@ -23,9 +24,9 @@
               <h2>Experiența noastră</h2>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="right-image">
-              <img src="assets/images/feature-image.jpg" alt="">
+              <img src="{% static 'assets/images/boss.jpg' %}" alt="">
             </div>
           </div>
           <div class="col-md-6">
